<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clave"
            android:text="@string/clave"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clave2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/clave2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fecha"
            android:text="@string/fecha"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fecha2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/fecha2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:text="@string/nombre"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/nombre2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/area"
            android:text="@string/area"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/area2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/area2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion"
            android:text="@string/descripcion"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/descripcion2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recibido"
            android:text="@string/recibido"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recibido2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/recibido2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entregado"
            android:text="@string/entregado"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entregado2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/entregado2"/>
    </LinearLayout>

</LinearLayout>
