<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clave"
            android:text="@string/clave"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clave2_2"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/clave2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/fecha"
            android:text="@string/fecha"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fecha2_2"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/fecha2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/nombre"
            android:text="@string/nombre"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre2_2"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/nombre2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/area2_2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/descripcion2_2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/recibido2_2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/entregado2_2"/>
    </LinearLayout>

</LinearLayout>
